<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="com.kirinpatel.calculator.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/calc_previous"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/calc_current"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:focusable="false"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/calc_clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/calc_clear"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/calc_sign"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/calc_sign"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/calc_percent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/calc_percent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/calc_divide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/calc_divide"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/calc_7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/calc_7"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/calc_8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/calc_8"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/calc_9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/calc_9"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/calc_multiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/calc_multiply"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/calc_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/calc_4"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/calc_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/calc_5"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/calc_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/calc_6"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/calc_subtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/calc_subtract"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/calc_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/calc_1"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/calc_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/calc_2"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/calc_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/calc_3"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/calc_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/calc_add"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/calc_0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/calc_0"
            android:layout_weight="2"/>

        <Button
            android:id="@+id/calc_period"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/calc_period"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/calc_calculate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/calc_calculate"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
